--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
         <item>Settings</item>
     </string-array>
     <string name="hello_world">Hello world!</string>
+    <string name="walk_in">Walk in</string>
+    <string name="has_appt">Upcoming appointment</string>
     <string name="action_settings">Settings</string>
     <string name="drawer_open">drawer_open</string>
     <string name="drawer_close">drawer_close</string>
