Added the user Profile

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="drawer_open">drawer_open</string>
     <string name="drawer_close">drawer_close</string>
     <string name="title_activity_splash_screen">SplashScreen</string>
+    <string name="patient_record">My Record</string>
+    <string name="title_activity_patient_records">PatientRecords</string>
 </resources>
